--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
     <link href="Accueil.css" rel="stylesheet">
+    
 
 </head>
 <body>
@@ -21,10 +22,16 @@
      <img src="IMG/CV-officiel.jpg" class="ImgPortfolio">
     </section>
 
-    <section class="Apropos">
-     <p class="TextApropos">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem sapiente quisquam ipsam sint, saepe dignissimos nemo hic provident at doloribus, recusandae magni. Laudantium rem sequi incidunt explicabo nisi officia recusandae!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem sapiente quisquam ipsam sint, saepe dignissimos nemo hic provident at doloribus, recusandae magni. Laudantium rem sequi incidunt explicabo nisi officia recusandae!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem sapiente quisquam ipsam sint, saepe dignissimos nemo hic provident at doloribus, recusandae magni. Laudantium rem sequi incidunt explicabo nisi officia recusandae!</p>
+    <footer">
+     <nav>
+         <ul>
+             <li><a href="https://www.facebook.com/">Facebook</a></li>
+             <li><a href="https://twitter.com">Twitter</a></li>
+             <li><a href="https://www.instagram.com/">Instagram</a></li>
+         </ul>
+     </nav>
     
-    </section>
+    </footer>
    
 </body>
 </html>
